--- a/index.html
+++ b/index.html
@@ -103,7 +103,10 @@
               </div>
             </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="white" fill-opacity="1" d="M0,96L48,128C96,160,192,224,288,240C384,256,480,224,576,186.7C672,149,768,107,864,106.7C960,107,1056,149,1152,192C1248,235,1344,277,1392,298.7L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path fill="white" 
+          fill-opacity="1" 
+          d="M0,96L48,128C96,160,192,224,288,240C384,256,480,224,576,186.7C672,149,768,107,864,106.7C960,107,1056,149,1152,192C1248,235,1344,277,1392,298.7L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
       </section>
       <section class="icons">
         <div class="container">
@@ -160,6 +163,7 @@
       </section>
 
       <section class="gallery">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 220"><path fill="#fff" fill-opacity="1" d="M0,128L30,112C60,96,120,64,180,64C240,64,300,96,360,96C420,96,480,64,540,58.7C600,53,660,75,720,96C780,117,840,139,900,138.7C960,139,1020,117,1080,122.7C1140,128,1200,160,1260,176C1320,192,1380,192,1410,192L1440,192L1440,0L1410,0C1380,0,1320,0,1260,0C1200,0,1140,0,1080,0C1020,0,960,0,900,0C840,0,780,0,720,0C660,0,600,0,540,0C480,0,420,0,360,0C300,0,240,0,180,0C120,0,60,0,30,0L0,0Z"></path></svg>
         <div class="container">
           <div class="row">
             <div class="col-md-10">
@@ -182,6 +186,76 @@
               </div>
             </div>
         </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,128L30,112C60,96,120,64,180,64C240,64,300,96,360,96C420,96,480,64,540,58.7C600,53,660,75,720,96C780,117,840,139,900,138.7C960,139,1020,117,1080,122.7C1140,128,1200,160,1260,176C1320,192,1380,192,1410,192L1440,192L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"></path></svg>
       </section>
+
+      <section class="services gradient">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,32L48,69.3C96,107,192,181,288,176C384,171,480,85,576,58.7C672,32,768,64,864,80C960,96,1056,96,1152,80C1248,64,1344,32,1392,16L1440,0L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+          <div class="container">
+            <div class="row align-items-center justify-content-center">
+              <div class="col-md-5">
+                <button type="button" class="btn btn-outline-light mb3">
+                  Steve Gameplay
+                </button>
+
+                <h1>Steve</h1>
+
+                <p>
+                  Steve from Minecraft is known by most people as the very best in Smash Ultimate. He has tools for nearly any situation imagineable and can kill off of any single attack. When playing Steve I mostly use his blocks to create my own platforms or to wall opponents out.
+                </p>
+              </div>
+              <div class="col-md-5"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcREoveoAHIpgTo6aG1AqH8dJr7zkH9xCybXaA&usqp=CAU" alt=""></div>
+              <div class="col-md-5"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQsJiOnm280GTSB0J3tJs0_MB9lVMW-42v4foTg8h_l437dQobaVSDOX4kQZkT32Lfnw0k&usqp=CAU" alt=""></div>
+              <div class="col-md-5">
+                <button type="button" class="btn btn-outline-light mb3">
+                  Corrin Gameplay
+                </button>
+                <h1>Corrin</h1>
+                <p>
+                  Corrin isn't known as a very good character, but Corrin's fast moves and high off-the-top kill power makes Corrin click with me. When playing Corrin I mostly utilize his ability to punish any attacks the opponent misses.
+                </p>
+              </div>
+              <div class="col-md-5">
+                <button type="button" class="btn btn-outline-light mb3">
+                  Ryu Gameplay
+                </button>
+                <h1>Ryu</h1>
+                <p>
+                  Ryu generaly doesnt preform well in tournaments as he doesn't have very much range. However, his fast burst options and input attacks make him unique and fun for me. When playing Ryu I aim to land light ground attacks that can cancel into Shoryuken.
+                </p>
+              </div>
+              <div class="col-md-5"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQey2vBa8hIi93RkUyj2n8uyaDiZz7izC0Oog&usqp=CAU" alt=""></div>
+            </div>
+          </div>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,32L48,69.3C96,107,192,181,288,176C384,171,480,85,576,58.7C672,32,768,64,864,80C960,96,1056,96,1152,80C1248,64,1344,32,1392,16L1440,0L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+      </section>
+
+      <section class="contact">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-5">
+              <h1>Contact to Fight:</h1>
+              <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+              </div>
+              <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Who you play as</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <button type="button" class="btn btn-secondary">Send</button>
+              </div>
+              </div>
+               <div class="col-md-5">  
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYmhJc-u9RJM0jrTjMp755Yre2zcdMdprqBQ&usqp=CAU" alt="">
+              </div>
+          </div>
+        </div>
+      </section>
+
+      <footer class="gradient">
+        <div class="container-fluid text-center">
+          <span>Made utilizing <a href="https://www.youtube.com/watch?v=1v_XcJsGtyA">YouTube tutorial</a> by Eli Eberle</span>
+        </div>
+      </footer>
 </body> 
 </html>
