--- a/about.html
+++ b/about.html
@@ -11,13 +11,9 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid classj">
-
-
-      <a class="navbar-brand classj" href="#">LOGO</a>
-
-
-      <button class="navbar-toggler" type="button" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+  <a class="navbar-brand" href="#"><img src="https://th.bing.com/th/id/OIP.62gV9lyDg9vYdy7mnE381QHaHa?w=162&h=180&c=7&r=0&o=5&pid=1.7" alt="" style="width:100px; height:100px" ></a> 
+  <div class="fard">HOME</div>  
+<button class="navbar-toggler" type="button" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       </button>
       <div class="navbar" id="navbarSupportedContent">
          <span class="fard"><ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -38,16 +34,17 @@
             </li>
           </ul></span>    
       </div>
-    </div>
   </nav>
+</div>
+      
 
   <div class="container">
     <div class="row">
-      <div class="col-md-2"></div>
+      <div class="col-md-3"></div>
         <div class="col-md-6 classj">
           <h1>Hello, world!</h1>
         </div>
-      <div class="col-md-2"></div>
+      <div class="col-md-3"></div>
     </div>
   </div>
 
