--- a/scheduling.html
+++ b/scheduling.html
@@ -1,42 +1,41 @@
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<title>Hello, world!</title>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kutz & Kolorz</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container-fluid classj">
+  <a class="navbar-brand" href="index.html"><img src="https://th.bing.com/th/id/OIP.62gV9lyDg9vYdy7mnE381QHaHa?w=162&h=180&c=7&r=0&o=5&pid=1.7" alt="" style="width:100px; height:100px; border-radius:20%;" ></a> 
+  <a href="index.html"><div class="fard">HOME</div></a>
+<button class="navbar-toggler" type="button" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+      <div class="navbar" id="navbarSupportedContent">
+         <span class="fard"><ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="scheduling.html" style="color:white;">SCHEDULING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="scheudling.html">SCHEDULING</a>
+              <a class="nav-link" href="product.html" style="color:white">PRODUCTS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="product.html">PRODUCTS</a>
+              <a class="nav-link" href="service.html" style="color:white">SERVICE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="service.html">SERVICE</a>
+              <a class="nav-link" href="gallery.html" style="color:white">GALLERY</a> 
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="gallery.html">GALLERY</a> 
+              <a class="nav-link" href="about.html" style="color:white">ABOUT</a> 
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">ABOUT</a> 
-            </li>
-          </li>
-        </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+          </ul></span>    
       </div>
-    </div>
   </nav>
+</div>
 <h1>Hello, world!</h1>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
