--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@
     </nav>
   </div>
 
-  <div class="container" style="position:relative; z-index:9;">
+  <div class="container">
     <div class="row">
       <div class="col-md-3"></div>
-        <div class="col-md-6 classj" style="width:617px; height:120px;">
-          <h1 style="color:white; font-size:60px; margin-top:20px;">Kutz & Kolorz</h1>
+        <div class="col-md-6 classj">
+          <h1 style="color:white;">Kutz & Kolorz</h1>
         </div>
-      <div class="col-md-2"></div>
-</div>
-      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" style="height:500px; position:absolute; width:100%; z-index:-1">
+      <div class="col-md-3"></div>
+    </div>
+  </div>
+
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -83,9 +85,41 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-</div>
-  
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link>
+    <hr>
+    */Footer/*
+    <div class="container-fluid">
+      <div class="row align-items-start">
+        <div class="col">
+          Phone:
+        </div>
+        <div class="col">
+          Scheduling
+        </div>
+      </div>
+      <div class="row align-items-center">
+        <div class="col">
+          Address:
+        </div>
+        <div class="col">
+          Facebook
+        </div>
+      </div>
+      <div class="row align-items-end">
+        <div class="col">
+          
+        </div>
+        <div class="col">
+          One of three columns
+        </div>
+        <div class="col">
+          <img id="footerimg" src="" alt="footerimg">
+        </div>
+      </div>
+      
+      <div class="vl"></div>
+    </div>
   </body>
 </html>
