--- a/product.html
+++ b/product.html
@@ -137,5 +137,32 @@
   </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+<div class="container-fluid footer">
+  <br>
+  <div class="row align-items-end">
+    <div class="col-md-1"></div>
+    <div class="col-md-5 number">
+      Phone:(731) 803-2553
+    </div>
+    <div class="col-md-5 number">
+      <a href="https://www.google.com/maps/place/Kutz+%26+Kolorz/@35.6957511,-88.838841,17z/data=!3m1!4b1!4m5!3m4!1s0x887ea7bf405ab185:0xb4146cf78dc64753!8m2!3d35.6956845!4d-88.8366512" class="nav-link" style="color: white;;">Address: 180 W University Pkwy, Jackson, TN 38305</a>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-5 number">
+      <a href="https://www.facebook.com/profile.php?id=100063473563222 number" class="nav-link" style="color: white;;">Facebook</a>
+    </div>
+    <div class="col-md-5 number">
+      <a href="https://kutzkolorzsalon.schedulista.com/" class="nav-link" style="color: white;;">Schedule appointment Now!</a>
+    </div>
+    <div class="col-md-1">
+      <img src="https://th.bing.com/th/id/OIP.62gV9lyDg9vYdy7mnE381QHaHa?w=162&h=180&c=7&r=0&o=5&pid=1.7" alt="" style="width:100px; height:100px; border-radius:20%;">
+    </div>
+
+    
+  </div>
 </body>
 </html>
