--- a/scheduling.html
+++ b/scheduling.html
@@ -4,39 +4,86 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=K2D&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kutz & Kolorz</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light">
-    <div class="container-fluid classj">
-  <a class="navbar-brand" href="index.html"><img src="https://th.bing.com/th/id/OIP.62gV9lyDg9vYdy7mnE381QHaHa?w=162&h=180&c=7&r=0&o=5&pid=1.7" alt="" style="width:100px; height:100px; border-radius:20%;" ></a> 
-  <a href="index.html"><div class="fard">HOME</div></a>
-<button class="navbar-toggler" type="button" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      </button>
+    
+    <div class="container-fluid classj" style="position:fixed;">
+  <a href="index.html"><img src="https://th.bing.com/th/id/OIP.62gV9lyDg9vYdy7mnE381QHaHa?w=162&h=180&c=7&r=0&o=5&pid=1.7" alt="" style="width:100px; height:100px; border-radius:20%;" ></a> 
+  <a class="nav-link" href="index.html"><div class="fard">HOME</div></a>
       <div class="navbar" id="navbarSupportedContent">
          <span class="fard"><ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="scheduling.html" style="color:white;">SCHEDULING</a>
+              <a class="nav-link" href="scheduling.html" style="color:#FEDFFF;">SCHEDULING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="product.html" style="color:white">PRODUCTS</a>
+              <a class="nav-link" href="product.html" style="color:#FEDFFF">PRODUCTS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="service.html" style="color:white">SERVICE</a>
+              <a class="nav-link" href="service.html" style="color:#FEDFFF">SERVICE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="gallery.html" style="color:white">GALLERY</a> 
+              <a class="nav-link" href="gallery.html" style="color:#FEDFFF">GALLERY</a> 
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" style="color:white">ABOUT</a> 
+              <a class="nav-link" href="about.html" style="color:#FEDFFF">ABOUT</a> 
             </li>
           </ul></span>    
       </div>
   </nav>
 </div>
-<h1>Hello, world!</h1>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-3"></div>
+      <div class="col-md-6 classj" style="border-radius:20px;">
+        <center>
+          <table style="height: 100px;">
+            <tbody>
+              <tr>
+                <td style="color:#FEDFFF; font-size:40px;">
+                  Hours & Scheduling
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </center>
+      </div>
+    <div class="col-md-2"></div>
+  </div>
+</div>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+<div class="container-fluid footer">
+  <br>
+  <div class="row align-items-end">
+    <div class="col-md-1"></div>
+    <div class="col-md-5 number">
+      Phone:(731) 803-2553
+    </div>
+    <div class="col-md-5 number">
+      <a href="https://kutzkolorzsalon.schedulista.com/">Scheduling</a>
+    </div>
+  </div>
+  <br>
+  <div class="row">
+    <div class="col-md-1"></div>
+    <div class="col-md-5 number">
+      <a href="https://www.google.com/maps/place/Kutz+%26+Kolorz/@35.6957511,-88.838841,17z/data=!3m1!4b1!4m5!3m4!1s0x887ea7bf405ab185:0xb4146cf78dc64753!8m2!3d35.6956845!4d-88.8366512">Address:</a>
+    </div>
+    <div class="col-md-5 number">
+      <a href="https://www.facebook.com/profile.php?id=100063473563222 number">Facebook</a>
+    </div>
+    <div class="col-md-1">
+      <img src="https://th.bing.com/th/id/OIP.62gV9lyDg9vYdy7mnE381QHaHa?w=162&h=180&c=7&r=0&o=5&pid=1.7" alt="" style="width:100px; height:100px; border-radius:20%;">
+    </div>
 </body>
 </html>
