--- a/product.html
+++ b/product.html
@@ -33,24 +33,36 @@
             <li class="nav-item">
               <a class="nav-link" href="about.html" style="color:white">ABOUT</a> 
             </li>
-          </ul></span>    
+          </ul></span>  
         </div>
       </div>
   </nav>
-<br><br><br><br><br>
-<div class="container classj">
-    <center>
-      <h1>Products</h1>
-    </center>
- </div>
-  <div class="container classj">
-    <center>  
-    <h4>What products will you find at Kutz & Kolorz?</h4>
-  </center>
+<br><br><br><br><br><br>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3"></div>
+      <div class="col-md-6 classj" style="border-radius:20px; border-style:solid;">
+        <center>
+          <table style="height: 100px;">
+            <tbody>
+              <tr>
+                <td class="title">
+                  <h1>Products</h1>
+                  <h6>Shampoos, Conditioners, and Other Products</h6>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </center>
+      </div>
+    <div class="col-md-2"></div>
   </div>
+</div>
+
+<br>
   <div class="card">
     <div class="card-body">
-      category 1 
+      <h3>Matrix Products</h3>
     </div>
   </div>
 
@@ -81,7 +93,13 @@
       </div>
     </div>
   </div>
-  <hr>
+  
+  <div class="card">
+    <div class="card-body">
+      <h3>RedKen Products</h3>
+    </div>
+  </div>
+
   <div class="row align-items-center">
     <div class="col">
       <div class="card" style="width: 18rem;">
@@ -108,7 +126,13 @@
       </div>
     </div>
   </div>
-  <hr>
+  
+  <div class="card">
+    <div class="card-body">
+      <h3>Other</h3>
+    </div>
+  </div>
+
   <div class="row align-items-end">
     <div class="col">
       <div class="card" style="width: 18rem;">
@@ -141,6 +165,8 @@
 
 <div class="container-fluid footer">
   <br>
+  <div class="row">
+    <div class="col-md-10">
   <div class="row align-items-end">
     <div class="col-md-1"></div>
     <div class="col-md-5 number">
@@ -159,9 +185,15 @@
     <div class="col-md-5 number">
       <a href="https://www.facebook.com/profile.php?id=100063473563222 number">Facebook</a>
     </div>
-    <div class="col-md-1">
-      <img src="https://th.bing.com/th/id/OIP.62gV9lyDg9vYdy7mnE381QHaHa?w=162&h=180&c=7&r=0&o=5&pid=1.7" alt="" style="width:100px; height:100px; border-radius:20%;">
-    </div>
-    
+  </div>
+</div>
+  <div class="col-md-2">
+    <img src="https://th.bing.com/th/id/OIP.62gV9lyDg9vYdy7mnE381QHaHa?w=162&h=180&c=7&r=0&o=5&pid=1.7" alt="" style="width:100px; height:100px; border-radius:20%;">
+  </div>
+</div>
+
+
+
+</div>
 </body>
 </html>
