--- a/scheduling.html
+++ b/scheduling.html
@@ -12,42 +12,42 @@
   <title>Kutz & Kolorz</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light">
-    
-    <div class="container-fluid classj" style="position:fixed;">
-  <a href="index.html"><img src="https://th.bing.com/th/id/OIP.62gV9lyDg9vYdy7mnE381QHaHa?w=162&h=180&c=7&r=0&o=5&pid=1.7" alt="" style="width:100px; height:100px; border-radius:20%;" ></a> 
-  <a class="nav-link" href="index.html"><div class="fard">HOME</div></a>
+   
+  <div class="container-fluid classj " style="position:fixed; z-index:10;">
+    <nav class="navbar navbar-expand-lg">
+      <a class="nav-link" href="index.html"><img src="https://th.bing.com/th/id/OIP.62gV9lyDg9vYdy7mnE381QHaHa?w=162&h=180&c=7&r=0&o=5&pid=1.7" alt="" style="width:100px; height:100px; border-radius:20%;"><span class="fard">    HOME</span></a> 
       <div class="navbar" id="navbarSupportedContent">
-         <span class="fard"><ul class="navbar-nav me-auto mb-2 mb-lg-0">
+         <span class="fard" style="margin-left:20%;"><ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="scheduling.html" style="color:#FEDFFF;">SCHEDULING</a>
+              <a class="nav-link" href="scheduling.html" style="color:white;">SCHEDULING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="product.html" style="color:#FEDFFF">PRODUCTS</a>
+              <a class="nav-link" href="product.html" style="color:white">PRODUCTS</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="service.html" style="color:#FEDFFF">SERVICE</a>
+              <a class="nav-link" href="service.html" style="color:white">SERVICE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="gallery.html" style="color:#FEDFFF">GALLERY</a> 
+              <a class="nav-link" href="gallery.html" style="color:white">GALLERY</a> 
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" style="color:#FEDFFF">ABOUT</a> 
+              <a class="nav-link" href="about.html" style="color:white">ABOUT</a> 
             </li>
           </ul></span>    
+        </div>
       </div>
   </nav>
-</div>
+<br><br><br><br><br><br><br>
 
 <div class="container">
   <div class="row">
     <div class="col-md-3"></div>
-      <div class="col-md-6 classj" style="border-radius:20px;">
+      <div class="col-md-6 classj" style="border-radius:20px; border-style:solid; height: 108px;width: 818px;left: -12px;top: -7px;border-radius: 20px;">
         <center>
           <table style="height: 100px;">
             <tbody>
               <tr>
-                <td style="color:#FEDFFF; font-size:40px;">
+                <td class="title">
                   Hours & Scheduling
                 </td>
               </tr>
@@ -58,12 +58,38 @@
     <div class="col-md-2"></div>
   </div>
 </div>
+<br>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-.5"></div>
+      <div class="col-md-4">
+          <div class="card" style="width: 18rem; height: 441px;width: 419px;left: 1px;top: 0px;border-radius: 15px;">
+            <div class="card-body">
+            <p class="card-text"><h1>Open Times</h1></p>
+            </div>
+      </div>
+    </div>
+    <div class="col-md-2"></div>
+      <div class="col-md-3">
+        <div class="card">
+          <div class="card-body">
+            <h1></h1>
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
+
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 <div class="container-fluid footer">
   <br>
+  <div class="row">
+    <div class="col-md-10">
   <div class="row align-items-end">
     <div class="col-md-1"></div>
     <div class="col-md-5 number">
@@ -82,8 +108,11 @@
     <div class="col-md-5 number">
       <a href="https://www.facebook.com/profile.php?id=100063473563222 number">Facebook</a>
     </div>
-    <div class="col-md-1">
-      <img src="https://th.bing.com/th/id/OIP.62gV9lyDg9vYdy7mnE381QHaHa?w=162&h=180&c=7&r=0&o=5&pid=1.7" alt="" style="width:100px; height:100px; border-radius:20%;">
-    </div>
+  </div>
+</div>
+  <div class="col-md-2">
+    <img src="https://th.bing.com/th/id/OIP.62gV9lyDg9vYdy7mnE381QHaHa?w=162&h=180&c=7&r=0&o=5&pid=1.7" alt="" style="width:100px; height:100px; border-radius:20%;">
+  </div>
+</div>
 </body>
 </html>
