--- a/gallery.html
+++ b/gallery.html
@@ -43,6 +43,8 @@
   </nav>
 <br><br><br><br><br><br><br>
 
+<button class="back-to-top hidden">Back To Top</button>
+
 <div class="container">
   <div class="row">
     <div class="col-md-3"></div>
@@ -65,7 +67,7 @@
     <div class="col-md-4"></div>
     <div class="col-md-6">
       <div class="card" style="text-align:center; align-content:center; width: 409; right:1vw;">
-        <p style="margin-top:.4vw; font-size:1vw;">Check out some of Sams previous work!</p>
+        <p style="margin-top:.4vw; font-size:25px;">Check out some of Sams previous work!</p>
       </div>
     </div>
   </div>
@@ -114,11 +116,11 @@
     <div class="col-md-4">
       <div class="card" style="height:20vw; top:3vw; border-radius:15px;">
         <div class="card-body">
-          <h1 style="font-size:2vw; color: #705454; text-align:center; text-decoration:underline;">Table of Contents</h1>
+          <h1 style="font-size:250%; color: #705454; text-align:center; text-decoration:underline;">Table of Contents</h1>
           <ul class="TOC">
-            <li><a href="#haircuts" style="color:#e29de0; font-size: 2.5vw;">Haircuts</a></li> <br>
-            <li><a href="#dyes" style="color:#e29de0; font-size: 2.5vw;">Dyes</a></li> <br>
-            <li><a href="#others" style="color:#e29de0; font-size: 2.5vw;">Others</a></li>
+            <li><a href="#haircuts" style="color:#e29de0; font-size: 30px;">Haircuts</a></li> <br>
+            <li><a href="#dyes" style="color:#e29de0; font-size: 30px;">Dyes</a></li> <br>
+            <li><a href="#others" style="color:#e29de0; font-size: 30px;">Others</a></li>
           </ul>
         </div>
       </div>
@@ -126,10 +128,10 @@
   </div>
 </div>
 
-<br><br><br><br><br>
+<span id="haircuts"></span><br><br><br><br><br>
 
 <div class="container-fluid">
-  <span id="haircuts"></span>
+  
   <div class="row">
     <div class="title classj" style="z-index: 3;">
       Haircuts
@@ -214,9 +216,9 @@
     </div>
   </div>
 </div>
-<br><br>
+<span id="dyes"></span><br><br><br><br><br><br><br><br><br>
 <div class="container-fluid">
-  <span id="dyes"></span>
+  
   <div class="row">
     <div class="title classj" style="z-index: 3;">
       Dyes
@@ -227,7 +229,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Dyes</h1>
         </div>
       </div>
     </div>
@@ -235,7 +237,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Dyes</h1>
         </div>
       </div>
     </div>
@@ -243,7 +245,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Dyes</h1>
         </div>
       </div>
     </div>
@@ -253,7 +255,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Dyes</h1>
         </div>
       </div>
     </div>
@@ -261,7 +263,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Dyes</h1>
         </div>
       </div>
     </div>
@@ -269,7 +271,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Dyes</h1>
         </div>
       </div>
     </div>
@@ -279,7 +281,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Dyes</h1>
         </div>
       </div>
     </div>
@@ -287,7 +289,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Dyes</h1>
         </div>
       </div>
     </div>
@@ -295,15 +297,15 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Dyes</h1>
         </div>
       </div>
     </div>
   </div>
 </div>
-<br><br>
+<span  id="others"></span><br><br><br><br><br><br>
 <div class="container-fluid">
-  <span  id="others"></span>
+  
   <div class="row">
     <div class="title classj" style="z-index: 3;">
       Others
@@ -314,7 +316,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Others</h1>
         </div>
       </div>
     </div>
@@ -322,7 +324,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Others</h1>
         </div>
       </div>
     </div>
@@ -330,7 +332,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Others</h1>
         </div>
       </div>
     </div>
@@ -340,7 +342,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Others</h1>
         </div>
       </div>
     </div>
@@ -348,7 +350,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Others</h1>
         </div>
       </div>
     </div>
@@ -356,7 +358,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Others</h1>
         </div>
       </div>
     </div>
@@ -366,7 +368,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Others</h1>
         </div>
       </div>
     </div>
@@ -374,7 +376,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Others</h1>
         </div>
       </div>
     </div>
@@ -382,7 +384,7 @@
       <div class="card" style="border-radius:15px;">
         <div class="card-body">
           <img src="img/hair.jpg" alt="" style="height:20vw; border-radius:15px; margin-left:1.5vw;">
-          <h1 style="text-align:center; color:#705454">Hair</h1>
+          <h1 style="text-align:center; color:#705454">Others</h1>
         </div>
       </div>
     </div>
@@ -390,7 +392,7 @@
 </div>
 
 <br><br><br><br><br><br>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 <div class="container-fluid footer">
   <br>
   <div class="row">
@@ -422,5 +424,7 @@
   </div>
 </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="scripts.js"></script>
 </body>
 </html>
