--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
    
-  <nav class="navbar navbar-expand-lg" style="margin-top:2.9vw">
+  <nav class="navbar navbar-expand-lg" style="margin-top:2.9vw;">
   <div class="container-fluid classj " style="position:fixed; z-index:10; box-shadow: 5px 2px 5px; width:100%;">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon">Toggle Navigation</span>
+      <span class="navbar-toggler-icon">Nav</span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
       <a class="nav-link" href="index.html"><img src="https://th.bing.com/th/id/OIP.62gV9lyDg9vYdy7mnE381QHaHa?w=162&h=180&c=7&r=0&o=5&pid=1.7" alt="" style="width:5.2vw; height:auto; border-radius:20%;"><span class="fard"> </span></a> 
@@ -43,52 +43,53 @@
   </nav>
 <br><br><br><br><br><br><br><br><br><br>
 
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-  <div class="carousel-indicators">
-    <div class="container" style="margin-bottom:32%;">
-      <div class="row">
-        <div class="col-md-3"></div>
-        <div class="col-md-6 classj" style="border-radius:20px; z-index: 7;">
-          <center>
-            <table style="height: 150px; ">
-              <tbody>
-                <tr>
-                  <td style="background-color:#e29de0;" class="align-baseline"><h1 class="title">Kutz </h1></td>
-                  <td style="background-color:#e29de0;" class="align-middle"><h1 class="title">&</h1></td>
-                  <td style="background-color:#e29de0;" class="align-bottom"><h1 class="title"> Kolorz</h1></td>
-                </tr>
-              </tbody>
-            </table>
-          </center>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+    <div class="carousel-indicators">
+      <div class="container" style="margin-bottom:32%;">
+        <div class="row">
+          <div class="col-md-3"></div>
+          <div class="col-md-6 classj" style="border-radius:20px; z-index: 7;">
+            <center>
+              <table style="height: 7.882vw; ">
+                <tbody>
+                  <tr>
+                    <td style="background-color:#e29de0;" class="align-baseline"><h1 class="title">Kutz </h1></td>
+                    <td style="background-color:#e29de0;" class="align-middle"><h1 class="title">&</h1></td>
+                    <td style="background-color:#e29de0;" class="align-bottom"><h1 class="title"> Kolorz</h1></td>
+                  </tr>
+                </tbody>
+              </table>
+            </center>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="col-md-2"></div>
         </div>
-        <div class="col-md-2"></div>
+      </div>
+
+    </div>
+    <div class="carousel-inner caro">
+      <div class="carousel-item active">
+        <img src="img/hair2.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="img/hair3.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="img/hair4.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
-
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
-  <div class="carousel-inner caro">
-    <div class="carousel-item active">
-      <img src="img/hair2.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/hair3.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="img/hair4.jpg" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
       <br>
@@ -100,16 +101,16 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3">
-          <div class="card" style="left: 0%;right: 73.82%;top: 4.82%;bottom: 0%; height: 500px;width: 390px;left: 0px;top: 23px;border-radius: 15px;">
+          <div class="card" style="left: 0%;right: 73.82%;top: 4.82%;bottom: 0%; height: 26.274vw;width: 20.494vw;left: 0px;top: 1.209vw;border-radius: 15px;">
             <div class="card-body">
-              <h1 style="text-align:center; color:#705454; text-decoration:underline;">Check Out Our Gallery!</h1>
-              <img src="img/hair.jpg" alt="" style="height: 358px;width: auto;left: 10px;top: 99px;border-radius: 540px;">
+              <h1 style="text-align:center; color:#705454; text-decoration:underline; font-size:2vw;">Check Out Our Gallery!</h1>
+              <img src="img/hair.jpg" alt="" style="height: 18.812vw;width: auto;left: .525vw;top: 5.202;border-radius: 540px;">
             </div>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="card" style="height: 62px;width: 770px;left: 359px;top: 159px;left: 9.36%;right: 15.84%;top: 33.33%;bottom: 53.67%;">
-            <div class="card-body" style="border-radius:0px; text-align:center; color:#705454; font-size:20px">
+          <div class="card" style="height: 3.258vw;width: 40.462vw;left: 18.865vw;top: 8.355vw;left: 9.36%;right: 15.84%;top: 33.33%;bottom: 53.67%;">
+            <div class="card-body" style="border-radius:0px; text-align:center; color:#705454; font-size:1.051vw">
               Kutz & Kolorz is a self owned salon ran by Sam Michael Pearson, <a style="color:#705454" href=about.html>learn more here!</a>
             </div>
           </div>
@@ -133,7 +134,7 @@
                   Thurs- 9am-1pm<br>
                   Fri- 9am-1pm <br>
                   Sat- 9am-1pm <br>
-                  <br> <br> <br>
+                  
                 </p>
                 <a href="https://kutzkolorzsalon.schedulista.com/"></a><button type="button" class="btn btn-secondary" style="background-color:#e29de0; color:whitesmoke; font-size:30px;">Set Up An Appointment Here!</button>
             </div>
