--- a/index.html
+++ b/index.html
@@ -109,24 +109,24 @@
           </div>
         </div>
         <div class="col-md-6">
-          <div class="card" style="height: 3.258vw;width: 40.462vw;left: 18.865vw;top: 8.355vw;left: 9.36%;right: 15.84%;top: 33.33%;bottom: 53.67%;">
+          <div class="card" style="height: 3.258vw;width: 150.462%;left: 18.865vw;top: 8.355vw;left: 9.36%;right: 15.84%;top: 33.33%;bottom: 53.67%;">
             <div class="card-body" style="border-radius:0px; text-align:center; color:#705454; font-size:1.051vw">
               Kutz & Kolorz is a self owned salon ran by Sam Michael Pearson, <a style="color:#705454" href=about.html>learn more here!</a>
             </div>
           </div>
 
-          <div class="card" style="height: 384px;width: 411px;left: 464px;top: 0px;border-radius: 15px;left: 53.03%;right: 0%;top: 60%;bottom: 0.94%;">
+          <div class="card" style="height: 23.607vw;width: 21.689vw;left: 35.775vw;top: 0px;border-radius: 15px;left: 53.03%;right: 0%;top: 60%;bottom: 0.94%;">
             <div class="card-body">
               <h1 style="text-align:center; color:#705454; text-decoration:underline;">Products</h1>
-              <img src="img/product.jpg" alt="" style="height: 287px;left: 59.31%;right: 7.89%;top: 9.56%;bottom: 55.27%;border-radius: 540px; margin-left:12%;">
+              <img src="img/product.jpg" alt="" style="height: 18.128vw;left: 59.31%;right: 7.89%;top: 9.56%;bottom: 55.27%;border-radius: 540px; margin-left:5%;">
             </div>
           </div>
         </div>
         
         <div class="col-md-3">
-          <div class="card" style="height: 365px;width: 227px;left: 1143px;top: 0px;border-radius:15px;left: 55.16%;right: 5.12%;top: 0%;bottom: 47.59%;">
+          <div class="card" style="height: 28.142vw;width: 17.502vw;left: 88.126vw;top: 0px;border-radius:15px;left: 55.16%;right: 5.12%;top: 0%;bottom: 47.59%;">
             <div class="card-body">
-                <p style="left: 82.06%;right: 0%;top: 1.47%;text-align:center;bottom: 23.69%;font-weight: 500;font-size: 25px;line-height: 35px;color: #705454;">
+                <p style="left: 82.06%;right: 0%;top: 1.47%;text-align:center;bottom: 23.69%;font-weight: 500;font-size: 1.928vw;line-height: 2.699vw;color: #705454;">
                   Open Times <br><br>
                   Mon- Closed <br>
                   Tues- 9am- 5pm <br>
@@ -157,7 +157,7 @@
         
         <div class="col-md-6"></div>
         <div class="col-md-3">
-          <div class="card" style="height: 427px;width: 512px;left: 0px;top: 0px;border-radius: 10px;">
+          <div class="card" style="height: 32.922vw;width: 39.476vw;left: 0px;top: 0px;border-radius: 10px;">
             <div class="card-body">
                 <h1 style="text-align:center; color:#705454; text-decoration:underline;">Location</h1>
                 <span style="margin-left:6%;">
