--- a/service.html
+++ b/service.html
@@ -56,9 +56,9 @@
 
 <br><br>
 <div class="container">
-  <div class="row" style="height:400px;">
+  <div class="row" style="height:21.019vw;">
     <div class="col-md-6">
-      <div class="card" style="border-radius:15px; width: 640px;height: 50px;">
+      <div class="card" style="border-radius:15px; width: 33.631vw;height: 2.627vw;">
         <div class="card-body" style="font-size:30px;">
           <p>
             How can I get my hair done at Kutz & Kolorz? <hr> 
@@ -67,27 +67,27 @@
         </div>
       </div></div>
       <div class="col-md-2"></div>
-      <div class="card" style="height: 300px;width: 300px; border-radius:20%; left:25%;;">
+      <div class="card" style="height: 15.765vw;width: 15.765vw; border-radius:20%; left:25%;;">
         <img src="img/" alt="">
       </div>
-      <div class="card" style="height: 300px;width: 300px; border-radius:20%; top:0%; left:60%;">
+      <div class="card" style="height: 15.765vw;width: 15.765vw; border-radius:20%; top:0%; left:60%;">
         <img src="img/" alt="">
       </div>
-      <div class="card" style="height: 250px;width: 250px; border-radius:20%; left:70%; top:10%;">
+      <div class="card" style="height: 13.137vw;width: 13.137vw; border-radius:20%; left:70%; top:10%;">
         <img src="img/" alt="">
       </div>
     
   </div> <br>
   <div class="row">
     <div class="col-md-3">
-      <div class="card menu" style="height:200px;">
+      <div class="card menu" style="height:10.51vw;">
        Hair Cut
         <span class="desc">Standard haircut, ask Sam what you want specifically done</span>
         <span class="price">M - $27 <br> W - $32 <br> C - $22</span>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card menu" style="height:200px;">
+      <div class="card menu" style="height:10.51vw;">
         Full Service
         <span class="desc"></span>
         <span class="price"></span>
@@ -97,28 +97,28 @@
 
   <div class="row">
     <div class="col-md-3">
-      <div class="card menu" style="height:200px;">
+      <div class="card menu" style="height:10.51vw;">
         Waxxing
         <span class="desc"></span>
         <span class="price"></span>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card menu" style="height:200px;">
+      <div class="card menu" style="height:10.51vw;">
         Curling Iron
         <span class="desc"></span>
         <span class="price"></span>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card menu" style="height:200px;">
+      <div class="card menu" style="height:10.51vw;">
         Keratin
         <span class="desc"></span>
         <span class="price"></span>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card menu" style="height:200px;">
+      <div class="card menu" style="height:10.51vw;">
         Tea Tree
         <span class="desc"></span>
         <span class="price"></span>
@@ -128,28 +128,28 @@
 
   <div class="row">
     <div class="col-md-3">
-      <div class="card menu" style="height:200px; font-size:38.9px;">
+      <div class="card menu" style="height:10.51vw; font-size:2.044vw;">
         Brazillian Blowout
         <span class="desc"></span>
         <span class="price"></span>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card menu" style="height:200px;">
+      <div class="card menu" style="height:10.51vw;">
         Extentions
         <span class="desc"></span>
         <span class="price"></span>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card menu" style="height:200px;">
+      <div class="card menu" style="height:10.51vw;">
         Full Color
         <span class="desc"></span>
         <span class="price"></span>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card menu" style="height:200px;">
+      <div class="card menu" style="height:10.51vw;">
         Highlights
         <span class="desc"></span>
         <span class="price"></span>
@@ -158,28 +158,28 @@
   </div> <br><br>
   <div class="row">
     <div class="col-md-3">
-      <div class="card menu" style="height:200px; font-size:38.9px;">
+      <div class="card menu" style="height:10.51vw; font-size:2.011vw;">
         Root Touchup
         <span class="desc"></span>
         <span class="price"></span>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card menu" style="height:200px;">
+      <div class="card menu" style="height:10.51vw;">
         Blowout
         <span class="desc"></span>
         <span class="price"></span>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card menu" style="height:200px;">
+      <div class="card menu" style="height:10.51vw;">
         Perm
         <span class="desc"></span>
         <span class="price"></span>
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card menu" style="height:200px;">
+      <div class="card menu" style="height:10.51vw;">
         Toner
         <span class="desc"></span>
         <span class="price"></span>
