--- a/service.html
+++ b/service.html
@@ -59,7 +59,7 @@
   <div class="row" style="height:21.019vw;">
     <div class="col-md-6">
       <div class="card" style="border-radius:15px; width: 33.631vw;height: 2.627vw;">
-        <div class="card-body" style="font-size:30px;">
+        <div class="card-body" style="font-size:1.576vw;">
           <p>
             How can I get my hair done at Kutz & Kolorz? <hr> 
             Below is a menu with all the different services Kutz & Kolors offers!
@@ -67,16 +67,16 @@
         </div>
       </div></div>
       <div class="col-md-2"></div>
-      <div class="card" style="height: 15.765vw;width: 15.765vw; border-radius:20%; left:25%;;">
+      <div class="card" style="height: 13.137vw;width: 13.137vw; border-radius:20%; right:5%;">
         <img src="img/" alt="">
       </div>
-      <div class="card" style="height: 15.765vw;width: 15.765vw; border-radius:20%; top:0%; left:60%;">
+       <div class="col-md-6">
+       </div> <div class="card" style="height: 15.765vw;width: 15.765vw; border-radius:20%; left:10%; top:10%;">
         <img src="img/" alt="">
       </div>
-      <div class="card" style="height: 13.137vw;width: 13.137vw; border-radius:20%; left:70%; top:10%;">
+      <div class="card" style="height: 13.137vw;width: 13.137vw; border-radius:20%; left:20%; top:20%;">
         <img src="img/" alt="">
       </div>
-    
   </div> <br>
   <div class="row">
     <div class="col-md-3">
